new adds website

--- a/website/index.html
+++ b/website/index.html
@@ -28,9 +28,12 @@
         </nav>
         <h1 class="text-left" data-aos="fade" data-aos-duration="3000" data-aos-delay="700" style="height:53px;margin:41px;">Your <strong>Green</strong> thumb, <strong>everywhere</strong></h1>
         <div class="col-md-12" style="width:675px;height:268px;padding:93px;margin:-41px;padding-top:36px;">
-            <div class="btn-group" role="group"><a class="btn btn-light btn-lg" role="button" href="Add Garden.html" data-aos="fade" data-aos-duration="1000" data-aos-delay="700" style="background-color:#F1B34D;width:458px;margin-top:18px;margin-bottom:36px;margin-left:36px;"><i class="fa fa-home"></i>&nbsp;Add a new garden</a></div>
+            <div class="btn-group" role="group"><a class="btn btn-light btn-lg" role="button" href="AddGarden" data-aos="fade" data-aos-duration="1000" data-aos-delay="700" style="background-color:#F1B34D;width:458px;margin-top:18px;margin-bottom:36px;margin-left:36px;"><i class="fa fa-home"></i>&nbsp;Add a new garden</a></div>
             <a
-                class="btn btn-light btn-lg" role="button" href="Add Plant.html" data-aos="fade" data-aos-duration="1000" data-aos-delay="850" id="bt2" style="background-color:#F1B34D;width:458px;margin-top:-8px;margin-bottom:36px;margin-left:36px;"><i class="fa fa-leaf"></i>&nbsp;Add a new plant</a><a class="btn btn-light btn-lg" role="button" href="Add Device.html" data-aos="fade" data-aos-duration="800" data-aos-delay="1100" id="bt2" style="background-color:#F1B34D;width:458px;margin-top:-8px;margin-bottom:36px;margin-left:36px;"><i class="fa fa-wrench"></i>&nbsp;Add a new device</a></div>
+                class="btn btn-light btn-lg" role="button" href="Add Plant.html" data-aos="fade" data-aos-duration="1000" data-aos-delay="850" id="bt2" style="background-color:#F1B34D;width:458px;margin-top:-8px;margin-bottom:36px;margin-left:36px;"><i class="fa fa-leaf"></i>&nbsp;Add a new plant</a><a class="btn btn-light btn-lg" role="button" href="Add Device.html" data-aos="fade" data-aos-duration="800" data-aos-delay="1100" id="bt2" style="background-color:#F1B34D;width:458px;margin-top:-8px;margin-bottom:36px;margin-left:36px;"><i class="fa fa-wrench"></i>&nbsp;Add a new device</a>
+                <a
+                    class="btn btn-light btn-lg" role="button" href="Add Device.html" data-aos="fade" data-aos-duration="800" data-aos-delay="1100" id="bt2" style="background-color:#F1B34D;width:458px;margin-top:-8px;margin-bottom:36px;margin-left:36px;"><i class="icon ion-stats-bars"></i>&nbsp;Thingspeak</a>
+        </div>
     </div>
     <div class="footer-dark" style="height:292px;margin:0px;">
         <footer>
